// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component button Button renders correctly 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#00ADB5",
      "borderRadius": 8,
      "flexDirection": "row",
      "height": 48,
      "justifyContent": "center",
      "paddingHorizontal": 25,
      "paddingVertical": 12,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFFFFF",
        "fontFamily": "Inter-Semi-bold",
        "fontSize": 18,
      }
    }
  >
    <Text>
      click
    </Text>
  </Text>
</View>
`;

exports[`component button Button snapshot 1`] = `
<TouchableNativeFeedback
  disabled={false}
>
  <View
    style={
      Object {
        "backgroundColor": "#00ADB5",
        "borderRadius": 8,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "paddingHorizontal": 25,
        "paddingVertical": 12,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Inter-Semi-bold",
          "fontSize": 18,
        }
      }
    >
      <Text>
        click
      </Text>
    </Text>
  </View>
</TouchableNativeFeedback>
`;

exports[`component button ButtonAddMedia renders correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#E0E0E0",
      "borderRadius": 8,
      "borderStyle": "dashed",
      "borderWidth": 2,
      "opacity": 1,
      "paddingVertical": 32,
    }
  }
>
  <Text
    style={Object {}}
  >
    +add more photos
  </Text>
</View>
`;

exports[`component button ButtonAddMedia snapshot 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "#E0E0E0",
        "borderRadius": 8,
        "borderStyle": "dashed",
        "borderWidth": 2,
        "paddingVertical": 32,
      },
      Object {},
    ]
  }
>
  <Text
    style={Object {}}
  >
    +add more photos
  </Text>
</ForwardRef>
`;

exports[`component button ButtonNewPost renders correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "flex-end",
      "backgroundColor": "#23C5B6",
      "borderRadius": 30,
      "bottom": 60,
      "flexDirection": "row",
      "opacity": 1,
      "paddingLeft": 13.67,
      "paddingRight": 12,
      "paddingVertical": 13,
      "position": "absolute",
      "right": 20,
      "width": 109,
    }
  }
>
  <View />
  <Text
    style={
      Object {
        "color": "#fff",
        "fontFamily": "Inter-Medium",
        "fontSize": 12,
        "marginLeft": 9.67,
      }
    }
  >
    New post
  </Text>
</View>
`;

exports[`component button ButtonNewPost snapshot 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Object {
      "alignSelf": "flex-end",
      "backgroundColor": "#23C5B6",
      "borderRadius": 30,
      "bottom": 60,
      "flexDirection": "row",
      "paddingLeft": 13.67,
      "paddingRight": 12,
      "paddingVertical": 13,
      "position": "absolute",
      "right": 20,
      "width": 109,
    }
  }
>
  <Memo(Ic_pencil)
    height={16.67}
    width={16.67}
  />
  <Text
    style={
      Object {
        "color": "#fff",
        "fontFamily": "Inter-Medium",
        "fontSize": 12,
        "marginLeft": 9.67,
      }
    }
  >
    New post
  </Text>
</ForwardRef>
`;
